--- a/src/components/home/css/index.css
+++ b/src/components/home/css/index.css
@@ -1,5 +1,7 @@
 hr {
-    margin: 0 .25rem;
+    margin: 0 .25rem !important;
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, .1);
 }
 
 .row {
@@ -77,6 +79,7 @@ hr {
 
 .totalPower-field {
     border-right: 2px #C6CAD5 solid;
+    padding: 0 !important;
 }
 
 .progress-bar-blue {
@@ -115,7 +118,7 @@ hr {
     background: #59C2D9;
 }
 
-.progress {
+.progress-container {
     width: 100%;
     height: 30px;
     background: #e8ebee;
@@ -150,12 +153,17 @@ hr {
 /* for machining_workpiece */
 
 .cellContent {
-    padding: 2rem 0;
+    padding: 5% 0;
+    height: 100%;
+}
+
+#collapseMW {
+    height: 100%;
 }
 
 .blockMW {
     position: relative;
-    height: 80px;
+    height: 50%;
     max-width: 250px;
     margin: auto;
 }
@@ -217,16 +225,17 @@ hr {
 /* for resultAnalysis */
 
 .resultAnalysis-items {
-    padding-top: 3rem;
+    height: 50%;
+    padding: 1.5rem 0;
 }
 
 .resultAnalysis-item {
     width: 30%;
     float: left;
-    height: 250px;
 }
 
 .resultAnalysis-chart {
+    height: 100%;
     width: 70%;
     float: left;
 }
@@ -247,53 +256,52 @@ input[type="checkbox"]+label span {
     display: inline-block;
     width: 20px;
     height: 20px;
-    background: url("../../../assets/header/img/uncheck.png");
+    background: url("../../../assets/home/img/uncheck.png");
     background-size: 20px;
     cursor: pointer;
 }
 
 input[type="checkbox"]:checked+label span {
-    background: url("../../../assets/header/img/check.png");
+    background: url("../../../assets/home/img/check.png");
     background-size: 20px;
 }
 
 /* for rwd screen */
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
     body {
         overflow-y: hidden;
     }
     .system-status {
-        z-index: 1000;
-        margin-top: 30px;
+        z-index: 1;
         margin-bottom: -70px;
     }
-    .w-xl-20 {
+    .w-lg-20 {
         float: left;
         width: 20%;
         padding: 5px 15px;
     }
-    .w-xl-40 {
+    .w-lg-40 {
         float: left;
         width: 40%;
         padding: 5px 15px;
     }
-    .w-xl-50 {
+    .w-lg-50 {
         float: left;
         width: 50%;
         padding: 5px 15px;
     }
-    .w-xl-60 {
+    .w-lg-60 {
         float: left;
         width: 60%;
         padding: 5px 15px;
     }
-    .w-xl-80 {
+    .w-lg-80 {
         float: left;
         width: 80%;
         padding: 5px 15px;
     }
-    .w-xl-100 {
+    .w-lg-100 {
         float: left;
         width: 100%;
         padding: 5px 15px;
@@ -302,32 +310,32 @@ input[type="checkbox"]:checked+label span {
         display: none;
     }
     .table-header {
-        padding-right: 1rem;
+        width: calc(100% - 17px);
     }
     .image-bg {
         width: 80%;
     }
-    .h-xl-100 {
+    .h-lg-100 {
         height: 100%;
     }
-    .h-xl-90 {
+    .h-lg-90 {
         height: 90%;
     }
-    .h-xl-80 {
+    .h-lg-80 {
         height: 80%;
     }
-    .h-xl-60 {
+    .h-lg-60 {
         height: 60%;
     }
-    .h-xl-40 {
+    .h-lg-40 {
         height: 40%;
     }
-    .h-xl-10 {
+    .h-lg-10 {
         height: 10%;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
     .w-xs-15 {
         float: left;
         width: 15%;
@@ -369,14 +377,11 @@ input[type="checkbox"]:checked+label span {
     .container-on-phone {
         padding: 0;
     }
-    .table-header div {
-        padding: 0;
-    }
     .table-value .row {
         border-top: none;
         padding: 0;
     }
-    .table-value .row div, .table-header div {
+    .table-value .row div, .table-header .row div {
         padding: 0;
         -webkit-transform: scale(0.6);
     }
@@ -403,5 +408,18 @@ input[type="checkbox"]:checked+label span {
     }
     .image-bg {
         width: 100%;
+    }
+    .blockMW {
+        height: 80px;
+        margin-bottom: 10px;
+    }
+    .resultAnalysis-items {
+        padding: 3rem 0;
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    .h-xl-100 {
+        height: 100%;
     }
 }
