--- a/src/components/SystemIndex/css/home.css
+++ b/src/components/SystemIndex/css/home.css
@@ -1,5 +1,8 @@
-.home {
-    background-color: rgba(255, 255, 255, 0.8);
+.home-container {
+    width: 100%;
+    height: 80vh;
+    padding: 15px 0;
+    overflow-x: hidden;
 }
 
 hr {
@@ -17,85 +20,35 @@ hr {
     border: 0;
 }
 
-.content-body {
-    border: 0.1rem solid #bbc4d2;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    border-radius: 5px;
+/* footer */
+
+.phone-footer {
+    width: 100vw;
+    height: 10vh;
+    line-height: 10vh;
+    background-color: #fff;
+    position: fixed;
+    bottom: 0;
 }
 
-.workTitle {
-    font-size: 16px;
-    padding-left: 1rem;
-    padding-top: 0.5rem;
-    color: #444A5A;
-    float: left;
-    font-weight: bold;
-}
-
-.system-title {
-    color: #6A7BAF;
-    font-size: 14px;
-    padding: 5px;
-    margin-left: 30px;
-    background-color: #ECF0F9;
-}
-
-.table-header {
-    border-top: 1px #6c81ba solid;
-    border-bottom: 1px #6c81ba solid;
-    color: #2d3d4f;
-    padding: 0.5rem 0;
-    font-size: 12px;
-    font-weight: bold;
-    margin: 0;
-}
-
-.table-value {
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
-
-.table-value .row {
-    border-top: 1px #6c81ba solid;
-    font-size: 14px;
-    color: #6a7cb1;
-    height: 50px;
-    line-height: 50px;
-    margin: 0;
+.phone-footer-img {
     padding: 0;
+    text-align: center;
 }
 
-.delivery-box {
-    width: 20px;
-    height: 20px;
+.phone-footer-container {
+    float: left;
+    text-align: center;
+    width: 14.28571428571429%;
 }
 
-/* checkbox */
-
-input[type="checkbox"] {
-    display: none;
+.phone-footer-container:hover {
+    background-color: #444a5a;
 }
 
-input[type="checkbox"]+label {
-    color: #f2f2f2;
-    margin: 0;
-    height: 20px;
-}
-
-input[type="checkbox"]+label span {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: url("../../../assets/home/img/uncheck.png");
-    background-size: 20px;
-    cursor: pointer;
-}
-
-input[type="checkbox"]:checked+label span {
-    background: url("../../../assets/home/img/check.png");
-    background-size: 20px;
+.phone-footer-container img {
+    height: 6vh;
+    width: 13vw;
 }
 
 /* for rwd screen */
@@ -103,10 +56,6 @@ input[type="checkbox"]:checked+label span {
 @media screen and (min-width: 992px) {
     body {
         overflow-y: hidden;
-    }
-    .system-status {
-        z-index: 1;
-        margin-bottom: -70px;
     }
     .w-lg-20 {
         float: left;
@@ -137,15 +86,6 @@ input[type="checkbox"]:checked+label span {
         float: left;
         width: 100%;
         padding: 5px 15px;
-    }
-    .hide-on-computer {
-        display: none;
-    }
-    .table-header {
-        width: calc(100% - 17px);
-    }
-    .image-bg {
-        width: 80%;
     }
     .h-lg-100 {
         height: 100%;
@@ -200,51 +140,5 @@ input[type="checkbox"]:checked+label span {
     }
     .hide-on-phone {
         display: none;
-    }
-    .table-value {
-        overflow: hidden;
-        max-height: none;
-        font-size: 12px;
-    }
-    .container-on-phone {
-        padding: 0;
-    }
-    .table-value .row {
-        border-top: none;
-        padding: 0;
-    }
-    .table-value .row div, .table-header .row div {
-        padding: 0;
-        -webkit-transform: scale(0.6);
-    }
-    .finished {
-        background-color: #DEF1D5;
-    }
-    .unfinished {
-        background-color: #FFCDAD;
-    }
-    .table-value .row {
-        height: 20px;
-        line-height: 20px;
-    }
-    .system-title {
-        font-size: 12px;
-        margin-left: 0;
-        -webkit-transform: scale(0.7);
-    }
-    .status-phone {
-        -webkit-transform: scale(0.7);
-    }
-    .system-status {
-        padding: 0;
-    }
-    .image-bg {
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 1800px) {
-    .h-xl-100 {
-        height: 100%;
     }
 }
